   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl

--1.75.23--

   !	Fix socket3_close() to address TIME_WAIT (socket zombie) issue
	by not calling shutdown SHUT_WR. Leave that to the application.
	TIME_WAIT handled by proper use of linger timeout.

	In the case of BarricadeMX:

	1. Make sure that socke close functions no longer do a shutdown
	   SHUT_WR as a default matter of corse.
	2. Set linger timeout to 0 on new client connections, assumes
	   most connections drop by client or if dropped by application.
	3. On SMTP QUIT set the linger timeout to about 3 or so seconds
	   for a clean close.

	This LONG article helps clarify things...
	http://www.serverframework.com/asynchronousevents/2011/01/time-wait-and-its-design-implications-for-protocols-and-scalable-servers.html

	Thsi one explained linger more clearly...
	http://alas.matf.bg.ac.rs/manuals/lspe/snode=105.html

   !	Fix socket3_set_ca_certs() to check if the cert_dir and ca_chain
	exist before calling SSL_CTX_load_verify_locations().

   +	Added support for ISO 8601 format to convertDate().

   !	Minor change to uriParse2() to allow scheme:/scheme-info, ie. :/
	vs :// when parsing http schemes; allows milter-link, BarricadeMX
	to catch bogus / spam URLs. This is a non-standard URI based on
	RFC 3986 and 2616.  Reported by Alex Broens.

   !	Updated uri.txt to clarify some test cases; also add Alex Broens
	"http:/" spam example.

   !	Minor change to playfair CLI to use getopt().

   !	Refactored DebugMalloc pthread support. Should now detect memory
	leaks per thread.

  !!	Fixed memory leak of PDQ_SECTION_QUERY in pdqListPruneMatch().

   !	Updated IANA TLD list.

   +	Added binary search tree API.

   +	Added pthread_spin_* API detection.

--1.75.22--

   *    Upgraded SQLite to 3.7.17

   !	Fixed socket3_connect() handling of ECONNREFUSED, particularly
	so that connections to a host with both an AAAA and A records