@@ -75,15 +75,15 @@ extern "C" {
  *      #endif
  */
 #ifdef __GNUC__
-# define __GNUC_PREREQ__(x, y)                                           \
+# define MY_GNUC_PREREQ(x, y)                                           \
         ((__GNUC__ == (x) && __GNUC_MINOR__ >= (y)) ||                  \
          (__GNUC__ > (x)))
 #else
-# define __GNUC_PREREQ__(x, y)   0
+# define MY_GNUC_PREREQ(x, y)   0
 #endif
 
 #ifndef __dead
-# if __GNUC_PREREQ__(2, 5)
+# if MY_GNUC_PREREQ(2, 5)
 #  define __dead          __attribute__((__noreturn__))
 # elif defined(__GNUC__)
 #  define __dead          volatile
